Using Spock with JUnit 5