@@ -52,41 +52,54 @@
 			<type>pom</type>
 		</dependency>
 
+		<dependency>
+			<groupId>org.spockframework</groupId>
+			<artifactId>spock-core</artifactId>
+			<version>1.2-groovy-2.5</version>
+			<scope>test</scope>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M4</version>
-			</plugin>
-
-			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.0</version><!-- 3.6.2 is the minimum -->
+				<version>3.8.0</version><!-- 3.1 is the minimum -->
 				<configuration>
 					<compilerId>groovy-eclipse-compiler</compilerId>
 					<compilerArguments>
+
 						<indy /><!-- optional; supported by batch 2.4.12-04+ -->
 						<configScript>config.groovy</configScript><!-- optional; supported 
 							by batch 2.4.13-02+ -->
 					</compilerArguments>
-					<failOnWarning>true</failOnWarning><!-- optional; supported by batch 
-						2.5.8-02+ -->
 				</configuration>
 				<dependencies>
 					<dependency>
 						<groupId>org.codehaus.groovy</groupId>
 						<artifactId>groovy-eclipse-compiler</artifactId>
-						<version>3.6.0-03</version>
+						<version>3.3.0-01</version>
 					</dependency>
+
+
 					<dependency>
 						<groupId>org.codehaus.groovy</groupId>
 						<artifactId>groovy-eclipse-batch</artifactId>
-						<version>2.5.9-01</version>
+						<version>2.5.4-01</version>
 					</dependency>
 				</dependencies>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.0</version>
+				<configuration>
+					<argLine>
+						--illegal-access=permit
+					</argLine>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
